--- a/src/main/resources/templates/tilbageLevering.html
+++ b/src/main/resources/templates/tilbageLevering.html
@@ -18,7 +18,10 @@
     <a th:if="${user == null}" th:href="@{/login}">Login</a>
     <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
     <div class="user-info">
-        <h1>Velkommen, <span th:text="${user != null ? user.name : 'Gæst'}">User</span></h1>
+        <h1>Velkommen,
+            <span th:if="${user != null}" th:text="${user.name + ' ' + user.lastName}">Bruger</span>
+            <span th:if="${user == null}">Gæst</span>
+        </h1>
     </div>
 </div>
 
@@ -27,7 +30,7 @@
         <h2>Tilbagelevering af bil</h2>
         <form th:action="@{/tilbagelevering}" method="post" th:object="${tilbagelevering}">
             <label>Vælg bil:</label>
-            <select th:field="*{car}" required>
+            <select th:field="*{car.id}" required>
                 <option th:each="car : ${cars}"
                         th:if="${car.returned == null or !car.returned}"
                         th:value="${car.id}"
