--- a/src/main/resources/templates/desktop.html
+++ b/src/main/resources/templates/desktop.html
@@ -7,19 +7,17 @@
 </head>
 <body>
 
-
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
-    <a th:href="@{/}">Overblik</a>
+    <a th:href="@{/desktop}">Overblik</a>
     <a th:href="@{/opretBil}">Opret bil</a>
     <a th:href="@{/opretKunde}">Opret Kunde</a>
     <a th:href="@{/skadeRegister}">Skade registrering</a>
     <a th:href="@{/rapport}">Rapport</a>
-    <a th:href= "@{/forhaandsaftale}"> Forhåndsaftale</a>
+    <a th:href="@{/forhaandsaftale}">Forhåndsaftale</a>
     <a th:href="@{/tilbagelevering}">Tilbagelevering</a>
-    <a th:if="${user == null}" th:href="@{/login}">Login</a>
-    <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
-
+    <a th:if="${user == null}" th:href="@{/}">Login</a>
+    <a th:if="${user != null}" th:href="@{/}">Logout</a>
 
     <div class="user-info">
         <h1>Velkommen, <span th:text="${user != null ? user.name : 'Gæst'}">User</span></h1>
@@ -31,6 +29,9 @@
         <h2>Samlet pris for udlejede biler:
             <span th:text="${totalRentedPrice} + ' kr.'"></span>
         </h2>
+        <h3>Antal udlejede biler:
+            <span th:text="${antalUdlejede}"></span>
+        </h3>
     </div>
 </div>
 
@@ -44,12 +45,12 @@
             <p><strong>Farve:</strong> <span th:text="${car.color}"></span></p>
             <p><strong>Nummerplade:</strong> <span th:text="${car.licensePlate}"></span></p>
             <p><strong>Status:</strong> <span th:text="${car.availability}"></span></p>
-
+            <form th:action="@{'/deleteCar/' + ${car.id}}" method="post" onsubmit="return confirm('Er du sikker på at du vil slette bilen?');">
+                <button type="submit">Slet bil</button>
+            </form>
         </div>
     </div>
 </div>
-
-
 
 </body>
 </html>
