--- a/src/main/resources/templates/economy.html
+++ b/src/main/resources/templates/economy.html
@@ -17,8 +17,8 @@
     <a th:href= "@{/economy}"> Økonomi</a>
     <a th:href= "@{/forhaandsaftale}"> Forhåndsaftale</a>
     <a th:href="@{/tilbagelevering}">Tilbagelevering</a>
-    <a th:if="${user == null}" th:href="@{/login}">Login</a>
-    <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
+    <a th:if="${user == null}" th:href="@{/}">Login</a>
+    <a th:if="${user != null}" th:href="@{/}">Logout</a>
 
 
     <div class="user-info">
