--- a/src/main/resources/templates/rapport.html
+++ b/src/main/resources/templates/rapport.html
@@ -9,15 +9,15 @@
 
 <div class="sidebar">
     <h2 class="menu-title">Menu</h2>
-    <a th:href="@{/}">Overblik</a>
+    <a th:href="@{/desktop}">Overblik</a>
     <a th:href="@{/opretBil}">Opret bil</a>
     <a th:href="@{/opretKunde}">Opret Kunde</a>
     <a th:href="@{/skadeRegister}">Skade registrering</a>
     <a th:href="@{/rapport}">Rapport</a>
     <a th:href= "@{/forhaandsaftale}"> Forhåndsaftale</a>
     <a th:href="@{/tilbagelevering}">Tilbagelevering</a>
-    <a th:if="${user == null}" th:href="@{/login}">Login</a>
-    <a th:if="${user != null}" th:href="@{/logout}">Logout</a>
+    <a th:if="${user == null}" th:href="@{/}">Login</a>
+    <a th:if="${user != null}" th:href="@{/}">Logout</a>
 
 
     <div class="user-info">
